# cryptopals

./: .ghci  .gitignore  Cargo.toml  README.md  cryptopals.cabal  default.nix  out.txt  test.txt
data/s1/: q1_output.txt  q2_output.txt
docs/: s1.md  s2.md  s3.md  s4.md  s5.md  s6.md
etc/: crackhmac.sh  crackmt.sh
etc/hmac/: hmac.js  index.js  package.json
lib/: Cryptopals.hs
lib/Cryptopals/: AES.hs  DH.hs  DSA.hs  MAC.hs  RSA.hs  SRP.hs  Util.hs
lib/Cryptopals/AES/: Mode.hs
lib/Cryptopals/Block/: Attacks.hs  Tools.hs
lib/Cryptopals/DH/: Core.hs  Session.hs
lib/Cryptopals/DSA/: Attacks.hs
lib/Cryptopals/Digest/Pure/: MD4.hs  SHA.hs
lib/Cryptopals/MAC/: Attacks.hs
lib/Cryptopals/RSA/: Attacks.hs
lib/Cryptopals/SRP/: Simple.hs
lib/Cryptopals/Stream/: Attacks.hs  RNG.hs
lib/Cryptopals/Stream/RNG/: MT19937.hs
lib/Cryptopals/Util/: ByteString.hs  Similarity.hs
lib/Pipes/: Network.hs
lib/aes_cbc/: Cargo.toml
lib/aes_cbc/src/: main.rs
lib/aes_ecb/: Cargo.toml
lib/aes_ecb/src/: main.rs
lib/b642hex/: B642Hex.hs
lib/break_single_byte_xor/: Cargo.toml
lib/break_single_byte_xor/src/: main.rs
lib/charfreq/: Cargo.toml
lib/charfreq/src/: main.rs
lib/chunks/: Chunks.hs
lib/ecb_detector/: Cargo.toml
lib/ecb_detector/src/: main.rs
lib/fixed_xor/: Cargo.toml
lib/fixed_xor/src/: main.rs
lib/hamming/: Hamming.hs
lib/hex2b64/: Cargo.toml  README.md
lib/hex2b64/src/: main.rs
lib/pkcs/: PKCS.hs
lib/repeating_key_xor/: Cargo.toml
lib/repeating_key_xor/src/: main.rs
lib/rotate/: Rotate.hs
lib/score_keysizes/: Score.hs
lib/single_byte_xor/: Cargo.toml
lib/single_byte_xor/src/: main.rs
src/: AES.hs  BreakSingleByteXor.hs  ByteFrequency.hs  DetectRepeatingKeyXorKeysize.hs  DetectSingleByteXor.hs  FixedXor.hs  MT19937.hs  OfflineDictionaryAttack.hs  Pkcs7.hs  RepeatingKeyXor.hs  Rotate.hs  errors.rs  main.rs  s1c01.rs  s1c02.rs  s1c03.rs  s1c07.rs  s1c1.rs  s1c2.rs  s1c3.hs  s1c3.rs  s1c4.hs  s1c5.rs  s1c6.hs  s1c7.rs  s2c09.rs  s2c10.rs  s2c11.rs  s2c12.rs  s2c13.rs  s2c9.rs
