name:                cryptopals
version:             0.1.0
synopsis:            Matasano's cryptopals exercises
homepage:            http://github.com/jtobin/cryptopals
license:             MIT
license-file:        LICENSE
author:              Jared Tobin
maintainer:          jared@jtobin.io
build-type:          Simple
cabal-version:       >= 1.10

library
  default-language:    Haskell2010
  default-extensions:
    BangPatterns
    LambdaCase
    OverloadedStrings
    RecordWildCards
    ViewPatterns
  hs-source-dirs:
    lib
  exposed-modules:
      Cryptopals.AES
    , Cryptopals.Util
    , Cryptopals.Util.ByteString
    , Cryptopals.Util.Similarity
  build-depends:
      base
    , base16
    , base64
    , bytestring
    , containers
    , cryptonite
    , text

executable fixed-xor
  main-is:           FixedXor.hs
  ghc-options:       -Wall -O2
  default-language:  Haskell2010
  hs-source-dirs:    src
  build-depends:
      base
    , base16
    , bytestring
    , cryptopals
    , optparse-applicative
    , text

executable break-single-byte-xor
  main-is:           BreakSingleByteXor.hs
  ghc-options:       -Wall -O2
  default-language:  Haskell2010
  hs-source-dirs:    src
  build-depends:
      base
    , base16
    , bytestring
    , cryptopals
    , optparse-applicative
    , text

executable byte-frequency
  main-is:           ByteFrequency.hs
  ghc-options:       -Wall -O2
  default-language:  Haskell2010
  hs-source-dirs:    src
  build-depends:
      base
    , base16
    , bytestring
    , cryptopals
    , optparse-applicative
    , text

executable detect-single-byte-xor
  main-is:           DetectSingleByteXor.hs
  ghc-options:       -Wall -O2
  default-language:  Haskell2010
  hs-source-dirs:    src
  build-depends:
      base
    , base16
    , bytestring
    , cryptopals
    , optparse-applicative
    , text

executable repeating-key-xor
  main-is:           RepeatingKeyXor.hs
  ghc-options:       -Wall -O2
  default-language:  Haskell2010
  hs-source-dirs:    src
  build-depends:
      base
    , base16
    , bytestring
    , cryptopals
    , optparse-applicative
    , text

executable detect-repeating-key-xor-keysize
  main-is:           DetectRepeatingKeyXorKeysize.hs
  ghc-options:       -Wall -O2
  default-language:  Haskell2010
  hs-source-dirs:    src
  build-depends:
      base
    , base64
    , bytestring
    , cryptopals
    , optparse-applicative
    , psqueues
    , text

executable rotate
  main-is:           Rotate.hs
  ghc-options:       -Wall -O2
  default-language:  Haskell2010
  hs-source-dirs:    src
  build-depends:
      base
    , base16
    , bytestring
    , cryptopals
    , optparse-applicative
    , text

executable aes
  main-is:           AES.hs
  ghc-options:       -Wall -O2
  default-language:  Haskell2010
  hs-source-dirs:    src
  build-depends:
      base
    , base16
    , bytestring
    , cryptopals
    , optparse-applicative
    , text

