name:                cryptopals
version:             0.1.0
synopsis:            Matasano's cryptopals exercises
homepage:            http://github.com/jtobin/cryptopals
license:             MIT
license-file:        LICENSE
author:              Jared Tobin
maintainer:          jared@jtobin.io
build-type:          Simple
cabal-version:       >= 1.10

library
  default-language:    Haskell2010
  default-extensions:
    BangPatterns
    DeriveGeneric
    LambdaCase
    OverloadedStrings
    RankNTypes
    RecordWildCards
    ViewPatterns
  hs-source-dirs:
    lib
  exposed-modules:
      Cryptopals.AES
    , Cryptopals.Block.Attacks
    , Cryptopals.Block.Tools
    , Cryptopals.DH
    , Cryptopals.DH.Core
    , Cryptopals.DH.Session
    , Cryptopals.Digest.Pure.MD4
    , Cryptopals.Digest.Pure.SHA
    , Cryptopals.MAC
    , Cryptopals.MAC.Attacks
    , Cryptopals.SRP
    , Cryptopals.SRP.Simple
    , Cryptopals.Stream.Attacks
    , Cryptopals.Stream.RNG
    , Cryptopals.Stream.RNG.MT19937
    , Cryptopals.Util
    , Cryptopals.Util.ByteString
    , Cryptopals.Util.Similarity
    , Pipes.Network
  build-depends:
      base
    , base16
    , base64
    , binary
    , bytestring
    , containers
    , cryptonite
    , HTTP
    , mwc-random
    , network
    , network-simple
    , pipes
    , pipes-binary
    , pipes-parse
    , primitive
    , text
    , time
    , transformers
    , unordered-containers
    , vector

executable fixed-xor
  main-is:           FixedXor.hs
  ghc-options:       -Wall -O2
  default-language:  Haskell2010
  hs-source-dirs:    src
  build-depends:
      base
    , base16
    , bytestring
    , cryptopals
    , optparse-applicative
    , text

executable break-single-byte-xor
  main-is:           BreakSingleByteXor.hs
  ghc-options:       -Wall -O2
  default-language:  Haskell2010
  hs-source-dirs:    src
  build-depends:
      base
    , base16
    , bytestring
    , cryptopals
    , optparse-applicative
    , text

executable byte-frequency
  main-is:           ByteFrequency.hs
  ghc-options:       -Wall -O2
  default-language:  Haskell2010
  hs-source-dirs:    src
  build-depends:
      base
    , base16
    , bytestring
    , cryptopals
    , optparse-applicative
    , text

executable detect-single-byte-xor
  main-is:           DetectSingleByteXor.hs
  ghc-options:       -Wall -O2
  default-language:  Haskell2010
  hs-source-dirs:    src
  build-depends:
      base
    , base16
    , bytestring
    , cryptopals
    , optparse-applicative
    , text

executable repeating-key-xor
  main-is:           RepeatingKeyXor.hs
  ghc-options:       -Wall -O2
  default-language:  Haskell2010
  hs-source-dirs:    src
  build-depends:
      base
    , base16
    , bytestring
    , cryptopals
    , optparse-applicative
    , text

executable detect-repeating-key-xor-keysize
  main-is:           DetectRepeatingKeyXorKeysize.hs
  ghc-options:       -Wall -O2
  default-language:  Haskell2010
  hs-source-dirs:    src
  build-depends:
      base
    , base64
    , bytestring
    , cryptopals
    , optparse-applicative
    , text

executable rotate
  main-is:           Rotate.hs
  ghc-options:       -Wall -O2
  default-language:  Haskell2010
  hs-source-dirs:    src
  build-depends:
      base
    , base16
    , bytestring
    , cryptopals
    , optparse-applicative
    , text

executable aes
  main-is:           AES.hs
  ghc-options:       -Wall -O2
  default-language:  Haskell2010
  hs-source-dirs:    src
  build-depends:
      base
    , base16
    , bytestring
    , cryptopals
    , optparse-applicative
    , text

executable pkcs7
  main-is:           Pkcs7.hs
  ghc-options:       -Wall -O2
  default-language:  Haskell2010
  hs-source-dirs:    src
  build-depends:
      base
    , base16
    , bytestring
    , cryptopals
    , optparse-applicative
    , text

executable mt19937
  main-is:           MT19937.hs
  ghc-options:       -Wall -O2
  default-language:  Haskell2010
  hs-source-dirs:    src
  build-depends:
      base
    , cryptopals
    , optparse-applicative
    , text

executable offline-dictionary-attack
  main-is:           OfflineDictionaryAttack.hs
  ghc-options:       -Wall -O2
  default-language:  Haskell2010
  hs-source-dirs:    src
  build-depends:
      base
    , base16
    , binary
    , bytestring
    , cryptopals
    , optparse-applicative
    , text
    , unordered-containers

